--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -15,6 +15,24 @@
             transform: translate(-50%, -50%);
         }
 
+        body {
+            font-family:Verdana;
+
+
+            width: 100%;
+            text-transform: uppercase;
+            background: #fff;
+            background-attachment: fixed;
+            background: url(img/bg.jfif) no-repeat 0px 0px;
+            background-size: cover;
+            -webkit-background-size: cover;
+            -o-background-size: cover;
+            -moz-background-size: cover;
+            -ms-background-size: cover;
+
+            /*text-align: center;*/
+        }
+
     </style>
 
 </head>
